Code refactoring to reduce warning count.